--- a/SpendSmart/Info.plist
+++ b/SpendSmart/Info.plist
@@ -11,7 +11,9 @@
 	</array>
 	<key>UILaunchScreen</key>
 	<dict/>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>SpendSmart uses your location to show nearby stores and spending patterns on the map.</string>
+        <key>NSLocationWhenInUseUsageDescription</key>
+        <string>SpendSmart uses your location to show nearby stores and spending patterns on the map.</string>
+        <key>CFBundleDevelopmentRegion</key>
+        <string>en</string>
 </dict>
 </plist>
